C/sofa.h


void iauPn06a(double date1, double date2,
              double *dpsi, double *deps, double *epsa,
              double rb[3][3], double rp[3][3], double rbp[3][3],
              double rn[3][3], double rbpn[3][3]);

void iauPnm00a(double date1, double date2, double rbpn[3][3]);

void iauPnm00b(double date1, double date2, double rbpn[3][3]);

void iauPnm06a(double date1, double date2, double rnpb[3][3]);

void iauPnm80(double date1, double date2, double rmatpn[3][3]);

void iauPom00(double xp, double yp, double sp, double rpom[3][3]);

void iauPr00(double date1, double date2,
             double *dpsipr, double *depspr);

void iauPrec76(double date01, double date02,
               double date11, double date12,
               double *zeta, double *z, double *theta);

double iauS00(double date1, double date2, double x, double y);

double iauS00a(double date1, double date2);

double iauS00b(double date1, double date2);

double iauS06(double date1, double date2, double x, double y);

double iauS06a(double date1, double date2);

double iauSp00(double date1, double date2);

void iauXy06(double date1, double date2, double *x, double *y);